# paradigm-compare

./: LICENSE  README.md
@wait/c-evolution-example/: CMakeLists.txt  README.md
@wait/c-evolution-example/src/: CMakeLists.txt  figure.c  figure.h  figure_rectangle.c  figure_rectangle.h  figure_triangle.c  figure_triangle.h  main.c  multimethod_figure.c  multimethod_figure.h  multimethod_figure_rectangle.c  multimethod_figure_rt_tr.c  multimethod_figure_triangle.c  print_figure.c  print_figure.h  print_figure_rectangle.c  print_figure_triangle.c
different-examples/e-life/e-life-c/: CMakeLists.txt
different-examples/e-life/e-life-c/src/: entity.c  entity.h  eworld.c  eworld.h  feeder.c  feeder.h  food.h  main.c  map.c  map.h
different-examples/e-life/e-life-ppclang/src/: CMakeLists.txt  entity.c  entity.h  eworld.c  eworld.h  food.c  food.h  main.c  map.c  map.h
languages-using/c++/evolution/opp-model/direct-inhierence/01-start/: CMakeLists.txt  container-in.cpp  container.h  figure-in.cpp  figure.cpp  figure.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
languages-using/c++/gof-patterns/abstract-factory/abstract-factory-and-common-figure-cpp/: CMakeLists.txt  container-constr.cpp  container-in.cpp  container-out.cpp  container.h  coord-figure-factory.cpp  coord-figure-factory.h  coord-rectangle.h  coord-triangle-in.cpp  coord-triangle-out.cpp  figure-factory.h  figure-in.cpp  figure.h  main.cpp  rectangle.h  simple-figure-factory.cpp  simple-figure-factory.h  simple-rectangle-in.cpp  triangle.h
languages-using/c++/gof-patterns/abstract-factory/abstract-factory-and-common-figure-cpp/data/: output1.txt
languages-using/c++/gof-patterns/builder/builder-cpp/: CMakeLists.txt  applique-collector.cpp  applique-collector.h  builder.h  figure-container.h  figure.h  figures-counter-builder.cpp  figures-counter-builder.h  main.cpp  simple-figures-builder.cpp  simple-figures-builder.h  simple-rectangle.cpp  simple-rectangle.h  simple-triangle.cpp  simple-triangle.h
languages-using/c++/gof-patterns/builder/builder-cpp/data/: output1.txt
languages-using/c++/gof-patterns/factory-method/factory-method-cpp/: CMakeLists.txt  figure-container.cpp  figure-creator.h  figure.cpp  figure.h  input-figures.cpp  main.cpp  simple-figure.h  simple-rectangle-creator.cpp  simple-rectangle-creator.h  simple-rectangle.cpp  simple-rectangle.h  simple-triangle-creator.cpp  simple-triangle-creator.h  simple-triangle.cpp  simple-triangle.h
languages-using/c++/gof-patterns/factory-method/factory-method-cpp/data/: output1.txt
languages-using/c++/gof-patterns/prototype/prototype-cpp/: CMakeLists.txt  main.cpp  simple-container.cpp  simple-container.h  simple-figure-in.cpp  simple-figure.h  simple-rectangle.cpp  simple-rectangle.h  simple-triangle.cpp  simple-triangle.h
languages-using/c++/gof-patterns/prototype/prototype-cpp/data/: output1.txt
languages-using/c/evolution/direct/: readme.md
languages-using/c/evolution/direct/02-new-spec/02-c-union-new-spec/: CMakeLists.txt  circle-in.c  circle-out.c  container-constr.c  container-in.c  container-out.c  figure-in.c  figure-out.c  main.c  rectangle-in.c  rectangle-out.c  triangle-in.c  triangle-out.c
languages-using/c/evolution/direct/02-new-spec/02-c-union-new-spec/data/: output1.txt
languages-using/c/evolution/direct/03-new-func/03-c-union-new-func/: CMakeLists.txt  container-perimeter-out.c  figure-out.c  figure-perimeter.c  main.c
languages-using/c/evolution/direct/06-multimethod/06-c-union-multimethod/: CMakeLists.txt  container-in.c  container-mm-out.c  main.c  multimethod.c  rectangle-out.c
languages-using/ppclang/evolution/direct/02-new-spec/02-ppclang-tag-new-spec/: CMakeLists.txt  circle-in.c  figure-circle-out.c  figure-circle.h  figures-input.c  main.c
languages-using/ppclang/evolution/direct/02-new-spec/02-ppclang-tag-new-spec/data/: output1.txt
languages-using/ppclang/evolution/direct/06-multimethod/06-ppclang-type-multimethod/: CMakeLists.txt  figures-input.c  main.c  triangle-in.c
languages-using/ppclang/gof-patterns/abstract-factory/abstract-factory-and-common-figure-ppclang/: CMakeLists.txt  container.c  container.h  figure-factory.c  figure-factory.h  figure-out.c  figure.h  figures-input.c  main.c  rectangle.h  simple-rectangle-inout.c
languages-using/ppclang/gof-patterns/abstract-factory/abstract-factory-and-common-figure-ppclang/data/: coord-input1.txt  output1.txt
languages-using/ppclang/gof-patterns/builder/builder-ppclang/: CMakeLists.txt  applique-collector.c  builder.c  builder.h  figure-container.c  figure-container.h  figure.c  figure.h  main.c  simple-rectangle.c  simple-triangle.c  simple-triangle.h  spec-builders.h
languages-using/ppclang/gof-patterns/builder/builder-ppclang/data/: output1.txt
languages-using/ppclang/gof-patterns/facade/facade-type-ppclang/: CMakeLists.txt  figure-container.c  figure-container.h  figure.c  figure.h  main.c  simple-rectangle.c  simple-triangle.c  use-container.c  use-container.h
languages-using/ppclang/gof-patterns/facade/facade-type-ppclang/data/: input1.txt  output1.txt
languages-using/ppclang/gof-patterns/iterator/iterator-tag-pplang/: CMakeLists.txt  container-array.c  container-ring-list.c  container.h  main.c  ring-list.c  ring-list.h  value.h
languages-using/ppclang/gof-patterns/prototype/prototype-type-ppclang/: CMakeLists.txt  main.c  simple-figure-container.c  simple-figure-container.h  simple-figure.c  simple-figure.h  simple-rectangle.c  simple-rectangle.h  simple-triangle.c  simple-triangle.h
languages-using/ppclang/gof-patterns/prototype/prototype-type-ppclang/data/: output1.txt
languages-using/ppclang/gof-patterns/singleton/singleton-tag-ppclang/: CMakeLists.txt  container-constr.c  interface.h  main.c
languages-using/ppclang/gof-patterns/singleton/singleton-tag-ppclang/data/: output1.txt
languages-using/ppclang/gof-patterns/visitor/visitor-type-direct-ppclang/: CMakeLists.txt  container-perimeter-out.c  figure-perimeter.c  figure-rectangle-in.c  figure-triangle-in.c  figure-triangle-out.c  figure-triangle.h  figures-input.c
(+496 files in other folders)
